<?xml version="1.0" encoding="UTF-8"?>


<!-- ~ Stratio Meta ~ ~ Copyright (c) 2014, Stratio, All rights reserved. 
	~ ~ This library is free software; you can redistribute it and/or modify 
	it under the terms of the ~ GNU Lesser General Public License as published 
	by the Free Software Foundation; either version ~ 3.0 of the License, or 
	(at your option) any later version. ~ ~ This library is distributed in the 
	hope that it will be useful, but WITHOUT ANY WARRANTY; without ~ even the 
	implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
	See the GNU ~ Lesser General Public License for more details. ~ ~ You should 
	have received a copy of the GNU Lesser General Public License along with 
	this library. -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.stratio.connector</groupId>
	<artifactId>stratio-connector-streaming</artifactId>
	<version>0.3.0-SNAPSHOT</version>
	<description>Connector for Stratio Streaming</description>
	<url>http://www.stratio.com</url>
	<name>Streaming Connector</name>

	<properties>
		<crossdata.version>0.2.0-RC1</crossdata.version>
		<commons.connector.version>0.4.0-RC2</commons.connector.version>
		<streaming.api.version>0.6.2</streaming.api.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0t</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git@github.com:Stratio/stratio-connector-streaming.git</connection>
		<developerConnection>scm:git:git@github.com:Stratio/stratio-connector-streaming.git</developerConnection>
		<url>https://github.com/Stratio/stratio-connector-streaming</url>
	</scm>

	<developers>

		<developer>
			<id>jmgomez</id>
			<name>Jose Manuel Gómez</name>
			<email>jmgomez@stratio.com</email>
			<roles>
				<role>architect</role>
				<role>developer</role>
				<role>maintainer</role>
			</roles>
		</developer>
		<developer>
			<id>darroyo</id>
			<name>David Arroyo Cazorla</name>
			<email>darroyo@stratio.com</email>
			<roles>
				<role>architect</role>
				<role>developer</role>
				<role>maintainer</role>
			</roles>
		</developer>


	</developers>


	<distributionManagement>

		<repository>
			<id>sonatype-nexus-staging</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>

		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>

	</distributionManagement>

	<dependencies>

		<dependency>
			<groupId>com.stratio.streaming</groupId>
			<artifactId>streaming-api</artifactId>
			<version>${streaming.api.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.datastax.cassandra</groupId>
					<artifactId>cassandra-driver-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.mongodb</groupId>
					<artifactId>mongo-java-driver</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.scalamock</groupId>
					<artifactId>scalamock-scalatest-support_2.10</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.jboss.netty</groupId>
					<artifactId>netty</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.stratio.connector</groupId>
			<artifactId>stratio-connector-commons</artifactId>
			<version>${commons.connector.version}</version>
		</dependency>

		<dependency>
			<groupId>com.stratio.crossdata</groupId>
			<artifactId>crossdata-connector</artifactId>
			<version>${crossdata.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.7</version>
		</dependency>


		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>1.5.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>1.5.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.8.8</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.stratio.connector</groupId>
			<artifactId>stratio-connector-commons</artifactId>
			<classifier>tests</classifier>
			<version>${commons.connector.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>


	<profiles>
		<profile>
			<id>FT</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.18</version>
						<configuration>
							<includes>
								<include>**/*FT.java</include>
							</includes>
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
								</goals>
								<configuration>
									<includes>
										<include>**/*FT.class</include>
									</includes>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<includes>
						<include>**/*Test.java</include>
					</includes>
					<argLine>${jacocoUT-argline}</argLine>
					<argLine>-noverify</argLine>
					<skip></skip>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<archive>
						<index>true</index>
						<manifestEntries>
							<version>${project.version}</version>
							<projectName>${project.name}</projectName>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.1.201405082137</version>
				<configuration>
					<destFile>${basedir}/target/jacoco.exec</destFile>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<aggregate>true</aggregate>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>


			<plugin>
				<artifactId>crossdata-connector-maven-plugin</artifactId>
				<groupId>com.stratio.crossdata</groupId>
				<version>${crossdata.version}</version>
				<configuration>
					<mainClass>com.stratio.connector.streaming.core.StreamingConnector</mainClass>
					<jmxPort>7188</jmxPort>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
